--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
         <link rel="stylesheet" href="http://at.alicdn.com/t/font_830376_qzecyukz0s.css">
         <style >
+            * {
+                -webkit-box-sizing: border-box;
+                -moz-box-sizing: border-box;
+                box-sizing: border-box;
+            }
             a,
             abbr,
             acronym,
